--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    Made by Lakshya Choithani ❤️
+    Made by Lakshya Choithani ❤
   </footer>
   <script src="index.js" charset="utf-8"></script>
 </body>
